fixed scroll button position on mobiles. increased line spacing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		
 		<meta name="author" content="Teemu Typpi" />	
-		<meta name="description" content="I am Teemu Typpi" />
+		<meta name="description" content="Teemu Typpi's online resume" />
 		<meta name="keywords" content="Teemu Typpi, Interactive Resume, Web developer, Software developer,  Interactive CV, Resume, CV, Algorithms, Java, C, C++, C#, JavaScript, ReactJS, JQuery, SQL" />
 		<meta name="robots" content="index, follow" />
         <meta name="revisit-after" content="14 days" />
