Added phonebook project

--- a/index.html
+++ b/index.html
@@ -702,13 +702,13 @@ is often more exciting.</p>
 
 	<div class="col-md-6 col-sm-12 col-xs-12">
 		<figure class="effect">
-			<img src="images/responsivepageproject.jpg" alt="Responsive web page with HTML/CSS" />
+			<img src="images/phonebookproject.jpg" alt="Phonebook app with React, Node, and MongoDB" />
 			
 			<figcaption>
-				<h3>Responsive web page</h3>
-				<p>Practicing to make a responsive web page with HTML / CSS</p>
-				<p><strong>Tags:</strong> <br />HTML, CSS</p>
-				<a href="https://teemut1.github.io/responsive-landing-page-practice/" target="_blank">View more</a>
+				<h3>Phonebook app</h3>
+				<p>Practicing React, Node, and MongoDB. App for the Full Stack Open course.</p>
+				<p><strong>Tags:</strong> <br />React, Node, MongoDB</p>
+				<a href="https://desolate-stream-99608.herokuapp.com/" target="_blank">View more</a>
 				<span class="icon">
 					<span class="glyphicon glyphicon-new-window"></span>
 				</span>
