--- a/index.html
+++ b/index.html
@@ -181,11 +181,12 @@ is often more exciting.</p>
                     <p>Studying independently: 
                         <ul>
                             <li>HTML / CSS</li>
-							<li>JavaScript / jQuery / ReactJS / NodeJS</li>
+							<li>JavaScript / React / Node</li>
 							<li>MongoDB</li>
                             <li>Java / Android studio</li>
                             <li>Python</li>
                             <li>Unity / C#</li>
+							<li>AI / Machine learning</li>
                         </ul>			</p></span>
 			
 			</p>
@@ -751,7 +752,7 @@ is often more exciting.</p>
 			<figcaption>
 				<h3>Bloglist app</h3>
 				<p>Small app for the Full Stack Open course. Practicing Redux, React router, react-bootstrap.</p>
-				<p><strong>Tags:</strong> <br />React, Redux, Node, React router, react-bootstrap</p>
+				<p><strong>Tags:</strong> <br />React, Redux, Node, REST, React router, react-bootstrap</p>
 				<a href="https://github.com/TeemuT1/bloglist-app" target="_blank">View more</a>
 				<span class="icon">
 					<span class="glyphicon glyphicon-new-window"></span>
@@ -762,13 +763,13 @@ is often more exciting.</p>
 
 	<div class="col-md-6 col-sm-12 col-xs-12">
 		<figure class="effect">
-			<img src="images/reacttodoproject.jpg" alt="Todo app with React" />
+			<img src="images/warehouseproject.jpg" alt="Warehouse app with React and Node" />
 			
 			<figcaption>
-				<h3>Todo app with React</h3>
-				<p>A simple todo app to practice ReactJS</p>
-				<p><strong>Tags:</strong> <br />ReactJS, NodeJS, Heroku</p>
-				<a href="https://react-todo-tt.herokuapp.com/" target="_blank">View more</a>
+				<h3>Warehouse app with React and Node</h3>
+				<p>Solving problems of a bad API with caching etc.</p>
+				<p><strong>Tags:</strong> <br />React, Node, Heroku</p>
+				<a href="https://github.com/TeemuT1/warehouse-assignment" target="_blank">View more</a>
 				<span class="icon">
 					<span class="glyphicon glyphicon-new-window"></span>
 				</span>
@@ -778,13 +779,13 @@ is often more exciting.</p>
 
 	<div class="col-md-6 col-sm-12 col-xs-12">
 		<figure class="effect">
-			<img src="images/phonebookproject.jpg" alt="Phonebook app with React, Node, and MongoDB" />
+			<img src="images/nameappproject.jpg" alt="A name listing app with React and Node" />
 			
 			<figcaption>
-				<h3>Phonebook app</h3>
-				<p>Practicing React, Node, and MongoDB. App for the Full Stack Open course.</p>
-				<p><strong>Tags:</strong> <br />React, Node, MongoDB</p>
-				<a href="https://desolate-stream-99608.herokuapp.com/" target="_blank">View more</a>
+				<h3>Name app</h3>
+				<p>A name listing app with React and Node.</p>
+				<p><strong>Tags:</strong> <br />React, Node, react-boostrap, Cypress</p>
+				<a href="https://github.com/TeemuT1/name-app" target="_blank">View more</a>
 				<span class="icon">
 					<span class="glyphicon glyphicon-new-window"></span>
 				</span>
