corrected some info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<div class="background-white">
 			<div id="profile" class="container">
 				<h2>Profile</h2>
-<p class="lead">A returning software developer</p>
+<p class="lead">Software developer</p>
 
 <hr />
 
@@ -149,7 +149,7 @@ is often more exciting.</p>
 				<strong>High school, emphasis on mathematics</strong>
 				<span class="hidden-phone">
                     I have always been good at mathematics and physics, so I enjoyed studying tons of extra courses there, basically every course available. They also offered one programming course, which I joined.
-                The breaks were good times playing chess and Magic: The Gathering. I graduated with several laudaturs, eximias, and one magna, including maximum points from the advanced maths matriculation exam.</span>
+                The breaks were good times playing chess and Magic: The Gathering. I graduated with several laudaturs and eximias, including maximum points from the advanced maths matriculation exam.</span>
 			</p>
 		</div>
 	</div>
@@ -225,7 +225,7 @@ is often more exciting.</p>
 			<p>
 				<strong>Software developer</strong>
 				<span class="hidden-phone">
-                    Suunto was very satisfied with my earlier internship period, so after graduation they employed me again. I continued developing their repair service's websites. I also improved their website's security.
+                    Suunto was very satisfied with my earlier internship period, so after graduation they employed me again. I continued developing their repair service's websites.
             				</span>
 				<span class="experience-details">
 			
@@ -246,7 +246,7 @@ is often more exciting.</p>
 			<h4>Suunto Oy</h4>
 			<p class="experience-period">
 				Jun 2009				- 
-				Oct 2009			</p>
+				Dec 2009			</p>
 		</div>
 		<div class="col-md-8">
 			<p>
@@ -766,8 +766,8 @@ is often more exciting.</p>
 			<img src="images/warehouseproject.jpg" alt="Warehouse app with React and Node" />
 			
 			<figcaption>
-				<h3>Warehouse app with React and Node</h3>
-				<p>Solving problems of a bad API with caching etc.</p>
+				<h3>Warehouse app</h3>
+				<p>Solving problems of a bad API by fetching and combining data in advance and caching it.</p>
 				<p><strong>Tags:</strong> <br />React, Node, Heroku</p>
 				<a href="https://github.com/TeemuT1/warehouse-assignment" target="_blank">View more</a>
 				<span class="icon">
